--- a/main/templates/main/create_topic.html
+++ b/main/templates/main/create_topic.html
@@ -1,14 +1,13 @@
 {% extends 'main/base.html'%}
 {% block title %}
-    Добавить запись
+    Добавить тему
 {% endblock %}
 
 {% block content %}
-    <h1>Новая запись:</h1>
+    <h1>Новая тема:</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.title }}<br>
-        {{ form.task }}<br>
         <button type="submit" class="btn btn-success">Сохранить</button>
         <span>{{ error }}</span>
     </form>
