--- a/main/templates/main/details_view.html
+++ b/main/templates/main/details_view.html
@@ -1,9 +1,9 @@
 {% extends 'main/base.html'%}
 {% block title %}
-    {{task.title}}
+    {{note.title}}
 {% endblock %}
 
 {% block content %}
-    <h1>{{task.title}}</h1>
-    <p>{{task.task}}</p>
+    <h1>{{note.title}}</h1>
+    <p>{{note.text}}</p>
 {% endblock %}
