--- a/main/templates/main/view.html
+++ b/main/templates/main/view.html
@@ -4,15 +4,36 @@
 {% block title %}Заметки{% endblock %}
 
 {% block content %}
-    <a href="{% url 'create' %}" class="btn btn-success btn-lg my-2" role="button" aria-pressed="true">
+    <a href="{% url 'create_topic' %}" class="btn btn-primary btn-lg my-2" role="button" aria-pressed="true">
+            <img src = '{% static "create/img/add.png" %}' class="pb-1" style='width: 20px'/> Добавить тему
+    </a><br>
+
+    <h1>Ваши темы:</h1>
+    {% if topics %}
+      <div class="row">
+        {% for el in topics %}
+          <div class="card mb-4 box-shadow col-md-4">
+            <div class="card-body">
+              <p class="card-text text-center">{{ el.title|upper }}</p>
+            </div>
+          </div>
+        {% endfor %}
+      </div>
+    {% else %}
+        <p>Вы ещё не создавали темы</p>
+    {% endif %}
+    <br>
+
+    <a href="{% url 'create_note' %}" class="btn btn-success btn-lg my-2" role="button" aria-pressed="true">
             <img src = '{% static "create/img/add.png" %}' class="pb-1" style='width: 20px'/> Добавить запись
     </a><br>
-    <h1>Ваши записи:</h1>
-    {% if tasks %}
-        {% for el in tasks %}
-        <div class="alert alert-dark">
+    <h2>Заметки без темы:</h2>
+    {% if notes %}
+        {% for el in notes %}
+        <div class="alert" style="background-color: {{el.color}}; ">
             <h3 class="mb-0 text-dark">{{ el.title|upper }}</h3>
-            <pre class="mb-auto text-dark"><span class="inner-pre" style="font-family:'Helvetica'; font-size: 18px">{{ el.task|truncatechars:100 }}</span></pre>
+            <pre class="mb-auto text-dark"><span class="inner-pre" style="font-family:'Helvetica';
+             font-size: 18px">{{ el.text|truncatechars:100 }}</span></pre>
             <a href="{% url 'task-upd' el.id %}" class="btn btn-outline-dark m-1">
                 Редактировать
             </a>
@@ -22,6 +43,6 @@
         </div>
         {% endfor %}
     {% else %}
-        <p>У вас ещё нет записей</p>
+        <p>У вас нет заметок без темы</p>
     {% endif %}
 {% endblock %}
