--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html lang="ru">
+<html lang="ru" data-bs-theme='light'>
 {% load static %}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+          content="width=device-width, user-scalable=no, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock %}</title>
     <link rel = "icon" type = "image/png" href ="{% static 'bar/img/notes.png' %}">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
     <style type="text/css">
         body {
             min-height: 100vh;
@@ -23,11 +23,11 @@
 <body>
     <div class="container">
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-          <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+          <a href="/" class="d-flex  col-md-3 mb-2 mb-md-0 text-dark text-decoration-none" style="pointer-events: none">
             <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
           </a>
 
-          <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+          <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 align-items-center">
             {% if user.is_authenticated %}
                 <li><a href="{% url 'home' %}" class="nav-link px-2 link-dark">Главная</a></li>
                 {% if user.is_superuser %}
@@ -65,8 +65,27 @@
             <div class=" justify-content-end d-flex">
                 <p class="mb-3 mb-md-0 text-muted">Контакты:</p>
                 <ul class="nav list-unstyled">
-                    <li class="ms-3"><a href="https://vk.com/ds.shushin " target="_blank"><img src="{% static 'footer/vk.png' %}" alt="VK" style="width:30px;height:30px;"></a></li>
-                    <li class="ms-3"><a href="https://t.me/Dimon_at" target="_blank"><img src="{% static 'footer/telegram.png' %}" alt="TELEGRAM" style="width:30px;height:30px;"></a></li>
+                    {% if settings.vk %}
+                    <li class="ms-3">
+                    <a href={{settings.vk}} target="_blank">
+                        <img src="{% static 'footer/vk.png' %}" alt="VK" style="width:30px;height:30px;">
+                    </a>
+                    </li>
+                    {% endif %}
+                    {% if settings.telegram %}
+                    <li class="ms-3">
+                        <a href={{settings.telegram}} target="_blank">
+                            <img src="{% static 'footer/telegram.png' %}" alt="TELEGRAM" style="width:30px;height:30px;">
+                        </a>
+                    </li>
+                    {% endif %}
+                    {% if settings.instagram %}
+                        <li class="ms-3">
+                            <a href={{settings.instagram}} target="_blank">
+                                <img src="{% static 'footer/instagram.png' %}" alt="INSTAGRAM" style="width:30px;height:30px;">
+                            </a>
+                        </li>
+                    {% endif %}
                 </ul>
             </div>
         </footer>
