basket initial functionality

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -35,6 +35,7 @@
                     <li><a href="{% url 'admin:index' %}" class="nav-link px-2 link-dark">Администрирование</a></li>
                 {% else %}
                     <li><a href="{% url 'notes' %}" class="nav-link px-2 link-dark">Заметки</a></li>
+                <li><a href="{% url 'basket' %}" class="nav-link px-2 link-dark">Корзина</a></li>
                 {% endif %}
 
             {% endif %}
