refactor note model

--- a/main/templates/main/create_note.html
+++ b/main/templates/main/create_note.html
@@ -9,6 +9,8 @@
         {% csrf_token %}
         {{ form.title }}<br>
         {{ form.text }}<br>
+        {{ form.topic }}<br>
+        {{ form.color }}<br>
         <button type="submit" class="btn btn-success">Сохранить</button>
         <span>{{ error }}</span>
     </form>
