--- a/register/templates/register/register.html
+++ b/register/templates/register/register.html
@@ -6,7 +6,7 @@
     <form method="post" class="form-group">
         {% csrf_token %}
         {{ form|crispy  }}
-        <button type="submit" class="btn btn-success">Зарегистрироваться</button>
+        <button type="submit" class="btn btn-success mb-3">Зарегистрироваться</button>
         <span>{{ error }}</span>
     </form>
 {% endblock %}
