--- a/register/templates/registration/acc_active_email.html
+++ b/register/templates/registration/acc_active_email.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 <body class="respond" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
     <!-- header -->
