--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -18,6 +18,23 @@
         .footer {
             margin-top: auto;
         }
+        .btn-primary{
+            background-color: rgb(0, 139, 139)!important;
+        }
+        .btn-primary:hover{
+            background-color: rgb(30, 144, 255)!important;
+        }
+        .bg-primary{
+            background-color: rgb(0, 139, 139)!important;
+            transition: 0.3s!important;
+            z-index:1;
+        }
+        .card:hover{
+            transform: scale(1.05);
+            z-index:2;
+            box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+            background-color: rgb(30, 144, 255)!important;
+        }
     </style>
 </head>
 <body>
